--- a/openrct2.vcxproj.filters
+++ b/openrct2.vcxproj.filters
@@ -923,6 +923,9 @@
     <ClInclude Include="src\rct1\Tables.h">
       <Filter>Source\RCT1</Filter>
     </ClInclude>
+    <ClInclude Include="src\object_list.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\logo\icon.ico">
